Updates for Material 15: - Restructured cards to use header/content elements, fixes padding. - Addressed padding and alignment in various elements

--- a/src/app/company/list/list.component.scss
+++ b/src/app/company/list/list.component.scss
@@ -20,7 +20,6 @@ a {
     flex-wrap: wrap;
 }
 
-/* TODO(mdc-migration): The following rule targets internal classes of card that may no longer apply for the MDC version. */
 mat-card {
     min-width: 12rem;
     margin: 1rem;
@@ -28,12 +27,11 @@ mat-card {
     color: $dark-primary-text;
 }
 
-/* TODO(mdc-migration): The following rule targets internal classes of card that may no longer apply for the MDC version. */
 mat-card-title {
+    font-weight: 700;
     font-size: medium !important;
 }
 
-/* TODO(mdc-migration): The following rule targets internal classes of card that may no longer apply for the MDC version. */
 mat-card * {
     background-color: $light-background;
     color: $dark-primary-text;
