--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -10,23 +10,20 @@ mat-card {
     background: #f8f8e0;
 }
 
-/*    TODO(mdc-migration): The following rule targets internal classes of card that may no longer apply for the MDC version.*/
+mat-card-content {
+    margin-top: 1rem;
+}
+
 mat-card.k2 {
     margin: 0.4rem;
     width: 22rem;
     background: #e0e8f0;
 }
 
-/*    TODO(mdc-migration): The following rule targets internal classes of card that may no longer apply for the MDC version.*/
 mat-card.k3 {
     margin: 0.4rem;
     width: 22rem;
     background: #e9fae8;
-}
-
-/*    TODO(mdc-migration): The following rule targets internal classes of card that may no longer apply for the MDC version.*/
-mat-card-title {
-    padding-bottom: 0.5rem;
 }
 
 h2 {
@@ -52,25 +49,21 @@ mat-icon {
 //    vertical-align: center;
 }
 
-/*    TODO(mdc-migration): The following rule targets internal classes of card that may no longer apply for the MDC version.*/
 mat-card div {
     display: flex;
     align-items: center;
 }
 
-/*    TODO(mdc-migration): The following rule targets internal classes of card that may no longer apply for the MDC version.*/
 mat-card div mat-icon {
     margin-left: 0.2rem;
     margin-right: 0.4rem;
 }
 
-/*    TODO(mdc-migration): The following rule targets internal classes of card that may no longer apply for the MDC version.*/
 mat-card-title {
     display: flex;
     align-items: center;
 }
 
-/*    TODO(mdc-migration): The following rule targets internal classes of card that may no longer apply for the MDC version.*/
 mat-card-title mat-icon {
     margin-right: 0.4rem;
 }
