--- a/src/styles.scss
+++ b/src/styles.scss
@@ -28,7 +28,8 @@
 /* You can add global styles to this file, and also import other style files */
 
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { margin: 0; }
+//font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 .drawer-container {
     margin: 0.5rem;
@@ -44,3 +45,4 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .main-content {
     padding: 1rem;
 }
+
